rust/transpiler/snapshots/attributes@style_dict@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/attributes/style_dict.hyper
---
injections: []
ranges: []
