rust/transpiler/snapshots/attributes@style_dict@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/attributes/style_dict.hyper
---
from hyper import replace_markers

def StyleDict() -> str:
    _parts = []
    style = {"color": "red", "font-weight": "bold"}
    _parts.append(f"""<p style=‹STYLE:{style}›>Important</p>""")
    return replace_markers("".join(_parts))
