rust/transpiler/snapshots/basic@empty_minimal@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/basic/empty_minimal.hyper
---
injections: []
ranges: []
