rust/transpiler/snapshots/basic@expression@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/basic/expression.hyper
---
from hyper import escape, replace_markers

def Expression(name: str) -> str:
    _parts = []
    _parts.append(f"""<h1>Hello ‹ESCAPE:{name}›</h1>""")
    return replace_markers("".join(_parts))
