rust/transpiler/snapshots/basic@hello@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/basic/hello.hyper
---
def Hello() -> str:
    _parts = []
    _parts.append("""<h1>Hello World</h1>""")
    return "".join(_parts)
